# Oryn-Finance

./: .gitignore  ACCESS_CONTROL_IMPLEMENTATION.md  BACKEND_SETUP_GUIDE.md  DOCKER_SETUP.md  FREIGHTER_FIXED.md  FRONTEND_BACKEND_INTEGRATION.md  GET_TESTNET_FUNDS.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  ORACLE_FALLBACK_IMPLEMENTATION.md  QUICK_START.md  QUICK_START_WALLET.md  README.md  WALLET_INTEGRATION_SUMMARY.md  contract_deployed_info  create-sample-markets.js  docker-compose.yml  populate-markets.js  quick-test.js  setup-mongodb.sh  simple-test.js  test-backend.js  test-backend.sh  test-create-market.js  test-integration.js
contracts/: .gitignore  Cargo.toml
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs
contracts/amm-pool/: Cargo.toml
contracts/amm-pool/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs
contracts/market-factory/: Cargo.toml
contracts/market-factory/src/: lib.rs
contracts/oracle-resolver/: Cargo.toml
contracts/oracle-resolver/src/: lib.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/tokens/: Cargo.toml
contracts/tokens/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/x402-integration/: Cargo.toml
contracts/zk-verifier/: Cargo.toml
(+208 files in other folders)
